@@ -9,3 +9,4 @@
 - fix None in coverconvert caused by imageCache being set too early -- kaneryu on 2025-01-06
 - try a fix for no corner radius showing in the songbar image -- kaneryu on 2025-01-06
 - Fix random application crash by not directly accessing song object that lives in a different thread using QML. -- kaneryu on 2025-01-07
+- fix bug where QML didn't recive the song object properly -- kaneryu on 2025-01-08
